--- a/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-classification/widgets/chart_selected_metrics.mdx
+++ b/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-classification/widgets/chart_selected_metrics.mdx
@@ -20,6 +20,11 @@ export const MetricsChart = ({ id, data, results, width, height }) => {
     "Disparate Impact": "Disparate Impact",
   };
 
+  // Defensive check to ensure data and data.metrics exist
+  if (!data || !data.metrics || !Array.isArray(data.metrics)) {
+    return <div>No metrics data available</div>;
+  }
+
   return (
       data.metrics.map(metric => 
         metric == "Equal Parity" || metric == "Disparate Impact" ?
@@ -40,7 +45,7 @@ export const MetricsChart = ({ id, data, results, width, height }) => {
   )
 }
 
-{props.getResults(cid) ? (
+{props.getResults(cid) && props.getIBData(ib_cid) ? (
 <MetricsChart
   id={props.id}
   data={props.getIBData(ib_cid)}
