--- a/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-classification/widgets/interpretation_selected_metrics.mdx
+++ b/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-classification/widgets/interpretation_selected_metrics.mdx
@@ -17,6 +17,12 @@ export const GetInterpretation = ({ data, results }) => {
     "Equal Parity": "Equal Selection Parity",
     "Disparate Impact": "Disparate Impact",
   };
+
+  // Defensive check to ensure data and data.metrics exist
+  if (!data || !data.metrics || !Array.isArray(data.metrics)) {
+    return <div>No metrics data available</div>;
+  }
+
   let content = [];
   let metrics = data.metrics;
   
@@ -47,7 +53,7 @@ export const GetInterpretation = ({ data, results }) => {
   <b>What it means:</b>
   <br/>
   The test results enable the Company to help its stakeholder understand if the model is able to predict the outcomes fairly among the demographic groups.
-  {props.getResults(cid) ? (
+  {props.getResults(cid) && props.getIBData(ib_cid) ? (
     <GetInterpretation
       id={props.id}
       data={props.getIBData(ib_cid)}
