edited the wording displayed

--- a/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-classification/widgets/summary_recommendation.mdx
+++ b/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-classification/widgets/summary_recommendation.mdx
@@ -81,8 +81,8 @@ export const GetInterpretation = ({ data, container, results }) => {
             Report is incomplete
           </div>
           <div style={{ color: '#6c757d' }}>
-            No Test Result is selected for Fairness Metrics Toolbox for Classification algorithm. 
-            Please select appropriate test results in the Data Selection page.
+            No Test Result or User Input is selected for Fairness Metrics Toolbox for Classification algorithm. 
+            Please select appropriate test results or user inputs in the Data Selection page.
           </div>
         </div>
       )}
