fix: robustness widget display error and inconsistencies

--- a/stock-plugins/aiverify.stock.robustness-toolbox/widgets/summary_description.mdx
+++ b/stock-plugins/aiverify.stock.robustness-toolbox/widgets/summary_description.mdx
@@ -132,7 +132,7 @@ export const MyChart = ({ results, modelType}) => {
                 {preword}<br/>
                 <ul>
                   <li>The original and perturbed dataset achieved a mean absolute error rate at {results.org_performance} and {results.perturbed_performance} respectively.</li>  
-                  <li>There is an increase in mean squared error at {diffScoreAbsolute()}.</li>
+                  <li>There is an increase in mean absolute error at {diffScoreAbsolute()}.</li>
                 </ul>
                 <br/>
                 <b>Recommendation(s):</b><br/>
