--- a/stock-plugins/aiverify.stock.robustness-toolbox/widgets/technical_description.mdx
+++ b/stock-plugins/aiverify.stock.robustness-toolbox/widgets/technical_description.mdx
@@ -123,11 +123,11 @@ export const MyChart = ({ results, modelType}) => {
             return (
               <>
                 <ul>
-                  <li>The original and perturbed dataset achieved a mean absolute error rate at {results.org_performance} and {results.perturbed_performance} respectively.</li>  
-                  <li>There is an increase in mean squared error at {diffScoreAbsolute()}.</li>
+                  <li>The original and perturbed dataset achieved a mean absolute error rate at {results.org_performance} and {results.perturbed_performance} respectively.</li>
+                  <li>There is an increase in mean absolute error at {diffScoreAbsolute()}.</li>
                 </ul>
               </>
-              
+
             )
           }
         }
@@ -137,7 +137,7 @@ export const MyChart = ({ results, modelType}) => {
                 <>
                   <ul>
                     <li>The original and perturbed dataset achieved an accuracy of {getPercentage("org_performance")}% and {getPercentage("perturbed_performance")}% respectively.</li>
-                    <li>The performance for both datasets are the same.</li>
+                    <li>The model may not be robust as there seems to have a {diffScorePercent()}% drop in accuracy.</li>
                   </ul>
                 </>
               )
